force-app/main/default/objects/Game__c/fields/Game_Date__c.field-meta.xml
<CustomField>
    <fullName>Game_Date__c</fullName>
    <description>경기 일시</description>
    <inlineHelpText>경기 일시</inlineHelpText>
    <label>Game Date</label>
    <type>DateTime</type>
</CustomField>