force-app/main/default/objects/Game__c/fields/Home_Away__c.field-meta.xml
<CustomField>
    <fullName>Home_Away__c</fullName>
    <description>홈 경기인지 원정 경기인지 구분</description>
    <inlineHelpText>홈 경기인지 원정 경기인지 구분</inlineHelpText>
    <label>Home / Away</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>