force-app/main/default/objects/Game__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>경기의 예정, 진행 완료 또는 취소 상태를 기록(Played 상태의 경기만 실제 진행 경기 수에 집계됨)</description>
    <inlineHelpText>경기의 예정, 진행 완료 또는 취소 상태를 기록</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Played</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>