force-app/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Season__c</columns>
    <columns>Game_Date__c</columns>
    <columns>Opponent__c</columns>
    <columns>Home_Away__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>