force-app/main/default/objects/Game__c/listViews/All_Games.listView-meta.xml
<ListView>
    <fullName>All_Games</fullName>
    <columns>Game_Date__c</columns>
    <columns>Opponent__c</columns>
    <columns>Result__c</columns>
    <columns>Home_Away__c</columns>
    <columns>Status__c</columns>
    <columns>Season__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Games</label>
</ListView>