force-app/main/default/objects/Game__c/listViews/X2025_Season.listView-meta.xml
<ListView>
    <fullName>X2025_Season</fullName>
    <columns>Game_Date__c</columns>
    <columns>NAME</columns>
    <columns>Opponent__c</columns>
    <columns>Result__c</columns>
    <columns>Status__c</columns>
    <columns>Home_Away__c</columns>
    <columns>Season__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Season__c</field>
        <operation>contains</operation>
        <value>2025</value>
    </filters>
    <label>2025 Season</label>
</ListView>